syntax = "proto3";

//import "dev/bayan_ibrahim/my_dictionary/words_list_preferences.proto";

option java_package = "dev.bayan_ibrahim.my_dictionary.data_source.local.proto.model";
option java_multiple_files = true;

message WordsListViewPreferencesProto {

  //  bool is_dynamic_theming_on = 1;
  string search_query = 1;
  int32 search_target_index = 2;
  bool include_select_tags = 3;
  repeated int32 selected_memorizing_probability_groups = 4;
  int32 sort_by = 5;
  int32 sort_by_order = 6;
}